--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="500">
           <div class="icon-box">
             <div class="icon"><i class="ri-fingerprint-line"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+            <h4 class="title"><a href="">AWS Academy</a></h4>
+            <p class="description">AWS Academy in association with College of Computing and Information Technology delivers courses on Cloud Computing and allied AWS technologies.</p>
           </div>
         </div>
 
