--- a/index.html
+++ b/index.html
@@ -215,16 +215,15 @@
           </div>
 
           <div class="col-lg-6 pt-3 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>Academies at the College of Computing and Information Technology .</h3>
             <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              The academies are inspired to give excellent courses and lab sessions for the undergraduate students in the College. The department focus to provide quality education and inspire students to earn more certificates from the academies. The main focus for the acadamies are:
             </p>
             <ul>
-              <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bx bx-check-double"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bx bx-check-double"></i> Voluptate repellendus pariatur reprehenderit corporis sint.</li>
-              <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bx bx-check-double"></i> Make students earn professional certificates for their future.</li>
+              <li><i class="bx bx-check-double"></i> Acquire quality education with the international level designed certifications.</li>
+              <li><i class="bx bx-check-double"></i> Become ready for the labor market to prove their worth in various computer sectors.</li>
+              <li><i class="bx bx-check-double"></i> Use the potential of the international connections to ensure high quality of teaching , learning and certification.</li>
             </ul>
             <p>
               Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
@@ -279,7 +278,7 @@
 
         <div class="section-title">
           <h2>Testimonials</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Let us try to hear back what our students speak about the academies offerings and the benefits they had from the academies.</p>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -289,12 +288,12 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  Apple Authorized training center for Education at the College of Computing and Technology empowered me to grow my skills in application development for iOS Devices. It was a really good experience to learn with the leaders in mobile development. 
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h3>Ameerah Alhafi</h3>
+                <h4>Senior Student &amp; iOS Enthusiast</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -302,12 +301,12 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  I want to build my career in Oracle Technologies. The Oracle Academy at the College of Computing and Information Technology gave me the beginning and i earned several certificates to enhance my knowledge in databases and Oracale Technologies.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <h3>Abdulrahman Al-Duaij</h3>
+                <h4>Senior Student &amp; Oracle Enthusiast</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -315,12 +314,12 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  My interest in Networks and related technologies grow more when i started working with CISCO Academy at the College of Computing and Information Technology. I earned several certificates that makes me ready for professional certification like CCNA.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <h3>Mohammad Alhoshan</h3>
+                <h4>Student (Pre-Final)</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -328,12 +327,12 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  I was deeply interested in Python Programming and the OpenEDU Academy at the College provided me a new way to learn programming in Python with so ease. My programming skills grew up with the courses on Python Programming and let me earn valuable certificates. 
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <h3>Ahmad Alplani</h3>
+                <h4>Student (Pre-Final)</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -341,12 +340,12 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  The AWS Academy at the College of Computing and Information Technology made me capable enough to enhance my knowledge in Amazon Clouds and make me ready for Cloud Computing Practisioner Certification by AWS. 
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
+                <h3>Jawahar Khalid</h3>
+                <h4>Senior Student</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -362,8 +361,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Sevices</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Streams</h2>
+          <p>Various academies at the College of Computing and Information Technology provides several courses in different streams based on the student interest and the courses they are taking.</p>
         </div>
 
         <div class="row">
@@ -375,8 +374,8 @@
                 </svg>
                 <i class="bx bxl-dribbble"></i>
               </div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4><a href="">Networks</a></h4>
+              <p>CISCO Networking Academy offers several courses on Computer Network and other subjects.</p>
             </div>
           </div>
 
@@ -388,8 +387,8 @@
                 </svg>
                 <i class="bx bx-file"></i>
               </div>
-              <h4><a href="">Sed Perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="">Programming</a></h4>
+              <p>OpenEDU </p>
             </div>
           </div>
 
