--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                 <i class="bx bx-file"></i>
               </div>
               <h4><a href="">Programming</a></h4>
-              <p>OpenEDU </p>
+              <p>OpenEDU Academy enables to learn programming in Python and C++ for Enthusiast who wish to make a career in the Python Coding environment.</p>
             </div>
           </div>
 
