--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@
                 </svg>
                 <i class="bx bx-tachometer"></i>
               </div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4><a href="">Cloud Computing</a></h4>
+              <p>Learn the basics and advance techniques for Cloud Computing with the AWS Academy Courses</p>
             </div>
           </div>
 
@@ -413,8 +413,8 @@
                 </svg>
                 <i class="bx bx-layer"></i>
               </div>
-              <h4><a href="">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <h4><a href="">iOS Application Development</a></h4>
+              <p>Join the Apple Authorized Training Center for Education and learn Swift / SwiftUI programming to develop iOS Applications. </p>
             </div>
           </div>
 
@@ -426,8 +426,8 @@
                 </svg>
                 <i class="bx bx-slideshow"></i>
               </div>
-              <h4><a href="">Dele Cardo</a></h4>
-              <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+              <h4><a href="">Database</a></h4>
+              <p>Unleash the power of Oracle Database and Programming to enhance your potential with Oracle Academy Courses.</p>
             </div>
           </div>
 
@@ -439,8 +439,8 @@
                 </svg>
                 <i class="bx bx-arch"></i>
               </div>
-              <h4><a href="">Divera Don</a></h4>
-              <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+              <h4><a href="">System Administration</a></h4>
+              <p>Enhance your skills on Server Administration and Management with brilliant Courses from RedHat Academy. </p>
             </div>
           </div>
 
@@ -453,9 +453,9 @@
     <section id="cta" class="cta">
       <div class="container" data-aos="zoom-in">
         <div class="text-center">
-          <h3>Call To Action</h3>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="cta-btn" href="#">Call To Action</a>
+          <h3>Come and Join Us! </h3>
+          <p> At the College of Computing and Information Technology, we connect you to various Academies to enhance your potential and knowledge in various technologies that are in demand across the labor market. Join us for a seamless learning experience and earn valuable Certificates for your Resume.</p>
+          <a class="cta-btn" href="#">Register Now!</a>
         </div>
       </div>
     </section><!-- End Cta Section -->
@@ -465,17 +465,17 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Academies@CCIT</h2>
+          <p>The international Collaboration of College of Computing and Information Technology empowers us to provide quality education and certification to our students. At the department of Computer Science, the members of the staff are dedicated to impart quality education to the students with the use of several global software domains and use the sophesticated platforms to provide real-time experience for learning to the students. </p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="150">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">2021-2023</li>
+              <li data-filter=".filter-card">2019-2021</li>
+              <li data-filter=".filter-web">2017-2019</li>
             </ul>
           </div>
         </div>
@@ -618,7 +618,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Team</h2>
+          <h2>Mentors</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
@@ -706,7 +706,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Pricing</h2>
+          <h2>Most Promising Connects</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
@@ -714,51 +714,53 @@
 
           <div class="col-lg-4 col-md-6" data-aos="zoom-im" data-aos-delay="100">
             <div class="box">
-              <h3>Free</h3>
-              <h4><sup>$</sup>0<span> / month</span></h4>
+              <h3>CISCO Courses</h3>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li class="na">Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>CyberSecurity</li>
+                <li>Networks</li>
+                <li>Internet of Things</li>
+                <li>Programming</li>
+                <li>Information Security</li>
+                <li class="na">CCNA</li>
+                <li class="na">CCNP</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Register!</a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="100">
             <div class="box featured">
-              <h3>Business</h3>
-              <h4><sup>$</sup>19<span> / month</span></h4>
+              <h3>AATCe</h3>
+              <h3>Apple Authorzied Training Center for Education </h3>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li class="na">Massa ultricies mi</li>
+                <li>Learn Swift</li>
+                <li>Learn SwiftUI</li>
+                <li>Develop iOS Applications</li>
+                <li>Machine Learning with Swift and iOS Applications </li>
+                <li class="na">Swift Enterprice</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Enroll Now!</a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
-              <h3>Developer</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
+              <h3>Oracle / AWS</h3>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
+                <li>Database Foundations</li>
+                <li>Programming in Java </li>
+                <li>Database Designer</li>
+                <li>Oracle APEX </li>
+                <li>AI and ML Using Oracle Technologies</li>
+                <li>Cloud Computing Practitioner</li>
+                <li>Machine Learning with AWS Services</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Register!</a>
               </div>
             </div>
           </div>
@@ -774,16 +776,16 @@
 
         <div class="section-title">
           <h2>Frequently Asked Questions</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>This section resolves all your queries that you have in your mind related to the Academies and their working.</p>
         </div>
 
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Non consectetur a erat nam at lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Are the Courses Paid / Free in the Academies? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
-                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                  The Academies are run at the College of Computing FREE OF COST. The students can get the benefit of earning free of cost certificates and learn with the Global Software Leading Platforms for their Career.
                 </p>
               </div>
             </li>
@@ -840,7 +842,7 @@
         </div>
 
         <div>
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28883.589695153423!2d45.17682366464838!3d25.188086099793136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2a71e14fe4622f%3A0xf74c9c2d40b084d0!2sShaqra%20University!5e0!3m2!1sen!2ssa!4v1680774028324!5m2!1sen!2ssa" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="row mt-5">
