--- a/index.html
+++ b/index.html
@@ -55,23 +55,7 @@
           <li><a class="nav-link scrollto o" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
+          
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
         </ul>
@@ -636,8 +620,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Dr. Munif Alotaibi</h4>
+                <span>Dean, College of Computing and Information Technology</span>
               </div>
             </div>
           </div>
@@ -654,8 +638,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>Dr. Abdulrahman Alghamdi</h4>
+                <span>Vice Dean, College of Computing and Information Technology</span>
               </div>
             </div>
           </div>
@@ -672,8 +656,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Dr. Saeed Alshahrani</h4>
+                <span>Vice Dean, College of Computing and Information Technology</span>
               </div>
             </div>
           </div>
@@ -690,8 +674,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
+                <h4>Dr. Nayyar Ahmed Khan</h4>
+                <span>Administrator & Trainer</span>
               </div>
             </div>
           </div>
@@ -852,19 +836,19 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Dawadami Street, Shaqra City, Riyadh Province, Saudi Arabia</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>nayyar@su.edu.sa</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+966 11 647 5526</p>
               </div>
 
             </div>
@@ -913,13 +897,13 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>OnePage</h3>
+            <h3>Shaqra University</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              Department of Computer Science<br>
+              College of Computing and Information Technology<br>
+              Saudi Arabia <br><br>
+              <strong>Phone:</strong> +966 11 647 5526<br>
+              <strong>Email:</strong> ccit@su.edu.sa<br>
             </p>
           </div>
 
@@ -927,31 +911,25 @@
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://www.su.edu.sa/ar">University</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://edugate.su.edu.sa/su/ui/home.faces">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://lms.su.edu.sa/">Learning</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://www.google.com/maps/place/Shaqra/@25.2402647,45.2244899,14z/data=!3m1!4b1!4m6!3m5!1s0x3e2a6900699805ed:0xb674a0d4111f9cd4!8m2!3d25.2476471!4d45.2524792!16s%2Fm%2F03cgfn7">Shaqra City</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Academies Connect </h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://aatce.github.io/aatc/">AATCe-Shaqra</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="http://netacad.com/portal/learning">CISCO-NetAcad</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://myacademy.oracle.com/">Oracle Academy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://www.awsacademy.com/AcademyHome">AWS-Academy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://edube.org/login">OpenEDG</a></li>
             </ul>
           </div>
 
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-          </div>
+          
 
         </div>
       </div>
@@ -961,14 +939,14 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>CCIT</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>College of Computing and Information Technology</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you purchased the pro version. -->
           <!-- Licensing information: https://bootstrapmade.com/license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/onepage-multipurpose-bootstrap-template/ -->
-          Designed by <a href="https://su.edu.sa/">CCIT, Shaqra</a>
+          Designed by <a href="https://su.edu.sa/">Shaqra University, CCIT</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
